[project]
name = "project-1-menshikova-daria-dpo-nod"
version = "0.1.0"
description = ""
authors = [
    {name = "Daria Menshikova", email = "dari.menshikova@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.poetry]
packages = [
    {include = "labyrinth_game"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
[dependency-groups]
dev = [
    "ruff (>=0.13.2,<0.14.0)"
]
